cmake_minimum_required(VERSION 3.13)
project(ds_lab_experiments C)

set(CMAKE_C_STANDARD 11)

#add_executable(ds_lab_experiments bubble_sorting.c circular_queue.c cq_link.c dq_array.c heap_sorting.c infix.c insertion_sort.c linked_list_operations.c merge_sort.c ms_array.c multiple_stack.c polynomial_addition.c polynomial_multiplication.c q_array.c q_link.c queue.c queue2.c quick_sort.c s_array.c s_link.c selection_sort.c stack2.c tree_using_linked_list.c)

add_executable(Bubble_Sort bubble_sorting.c)